Updated fil (new translator)

--- a/CustomRPC/About.fil.resx
+++ b/CustomRPC/About.fil.resx
@@ -121,7 +121,7 @@
     <value>Ginawa ni: maximmax42</value>
   </data>
   <data name="buttonClose.Text" xml:space="preserve">
-    <value>I-Sara</value>
+    <value>Isara</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
     <value>Tungkol sa aplikasyon</value>
