--- a/CustomRPC/About.pt.resx
+++ b/CustomRPC/About.pt.resx
@@ -122,7 +122,7 @@
     <value>179, 19</value>
   </data>
   <data name="labelMadeBy.Text" xml:space="preserve">
-    <value>Feito por: maximmax42</value>
+    <value>Criado por: maximmax42</value>
   </data>
   <data name="buttonClose.Text" xml:space="preserve">
     <value>Fechar</value>
