--- a/CustomRPC/ErrorReportViewer.pt.resx
+++ b/CustomRPC/ErrorReportViewer.pt.resx
@@ -121,7 +121,7 @@
     <value>CustomRP parou de funcionar na ultima sessão por causa deste erro:</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>Reporto de Erro</value>
+    <value>Reportar Erro</value>
   </data>
   <data name="buttonOK.Text" xml:space="preserve">
     <value>OK</value>
