--- a/CustomRPC/MainForm.de.resx
+++ b/CustomRPC/MainForm.de.resx
@@ -436,10 +436,10 @@ Um wirksam zu werden, sollten beide Felder größer als 0 sein.</value>
     <value>Die zweite Schaltfläche, die direkt unter der ersten Schaltfläche erscheint oder an deren Stelle, wenn die erste nicht gesetzt ist.</value>
   </data>
   <data name="labelButton1URL.ToolTip" xml:space="preserve">
-    <value>URL, zu dem der Benutzer weitergeleitet wird nachdem der Knopf gedrückt wird.</value>
+    <value>URL, zu der der Benutzer weitergeleitet wird nachdem der Knopf gedrückt wird.</value>
   </data>
   <data name="labelButton2URL.ToolTip" xml:space="preserve">
-    <value>URL, zu dem der Benutzer weitergeleitet wird nachdem der Knopf gedrückt wird.</value>
+    <value>URL, zu der der Benutzer weitergeleitet wird nachdem der Knopf gedrückt wird.</value>
   </data>
   <data name="labelButton1Text.ToolTip" xml:space="preserve">
     <value>Beschriftung des ersten Knopfs.</value>
