Updated sk (new translator)

--- a/CustomRPC/MainForm.sk.resx
+++ b/CustomRPC/MainForm.sk.resx
@@ -152,7 +152,7 @@
     <value>150, 22</value>
   </data>
   <data name="trayMenuQuit.Text" xml:space="preserve">
-    <value>Skončiť</value>
+    <value>Ukončiť</value>
   </data>
   <data name="fileToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>50, 20</value>
