--- a/CustomRPC/UpdatePrompt.zh-Hant.resx
+++ b/CustomRPC/UpdatePrompt.zh-Hant.resx
@@ -128,7 +128,7 @@
     <value>109, 14</value>
   </data>
   <data name="labelQuestion.Text" xml:space="preserve">
-    <value>您要下載此更新嗎?</value>
+    <value>您要下載這項更新嗎？</value>
   </data>
   <data name="checkBoxNeverNotify.Size" type="System.Drawing.Size, System.Drawing">
     <value>98, 18</value>
