--- a/CustomRPC/UpdatePrompt.fa.resx
+++ b/CustomRPC/UpdatePrompt.fa.resx
@@ -155,6 +155,6 @@
     <value>True</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>بروزرسانی موجود است</value>
+    <value>بروزرسانی در دسترس است</value>
   </data>
 </root>
