--- a/CustomRPC/About.fa.resx
+++ b/CustomRPC/About.fa.resx
@@ -142,6 +142,6 @@
     <value>True</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>درباره</value>
+    <value>درباره برنامه</value>
   </data>
 </root>
