--- a/CustomRPC/ErrorReportViewer.fa.resx
+++ b/CustomRPC/ErrorReportViewer.fa.resx
@@ -121,7 +121,7 @@
     <value>باشه</value>
   </data>
   <data name="labelInfo.Text" xml:space="preserve">
-    <value>نرم افزار خطا داد!
+    <value>نرم افزار به مشکل برخورد!
 خطای سیستم:</value>
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
